<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp190"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimaryDark"
    android:orientation="vertical"
    android:gravity="bottom"
    android:padding="@dimen/dp16"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <LinearLayout
        android:id="@+id/tab_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingStart="@dimen/dp10"
        android:paddingEnd="@dimen/dp10"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp14"
            tools:text="@string/str_user_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/tv_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:textSize="@dimen/sp14"
            tools:text="@string/str_nick_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:textSize="@dimen/sp14"
            tools:text="@string/str_mobile"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:textSize="@dimen/sp14"
            tools:text="@string/str_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </LinearLayout>



</FrameLayout>